--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -10,7 +10,7 @@ tools:context=".SignUpActivity">
     android:id="@+id/app_logo"
     android:layout_width="150dp"
     android:layout_height="150dp"
-    android:src="@drawable/gfglogo"
+    android:src="@drawable/chatapplogo"
     android:layout_centerHorizontal="true"
     android:layout_marginTop="70dp"/>
 
